Revision history for App-Pocoirc

{{$NEXT}}

0.17  Sat Sep 25 09:42:36 UTC 2010
    - Move -p/--plugin to -P/--plugin
    - Add -p/--password for specifying a server password
    - Add -N/--nspassword to specify a NickServ password
    - Add -a/--arg to specify arbitrary arguments to POE::Component::IRC
    - Log when we identify with NickServ

0.16  Sat Sep 4 02:18:19 UTC 2010
    - Add a -j/--join option to join channels with the AutoJoin plugin

0.15  Tue Aug 17 22:33:32 GMT 2010
    - Terminate gracefully when we get SIGTERM
    - Make all warnings fatal

0.14  Mon Aug 2 07:46:04 GMT 2010
    - Enable USE_SIGCHLD in POE for instant child process reaping. Might make
      a difference with bots that use a lot of fork()ing plugins.
    - Fix a bug which caused -V/--version to not print the version
    - Color plugin errors red like other errors

0.13  Mon Jul 26 03:54:30 GMT 2010
    - Shutdown properly when connected to a server which we've failed to log
      into. Depend on POE::Component::IRC 6.36 for this.
    - Allow a default server again
    - Fix an error which was causing some plugins to fail to load

0.12  Sat Jul 24 21:34:01 GMT 2010
    - Exit after --version
    - Only daemonize after we've done more sanity checks

0.11  Sat Jul 24 21:11:25 GMT 2010
    - Shut down disconnected IRC components properly
    - Rename "-c" option to "-f" and make "-c" validate the config file

0.10  Mon Jun 28 21:39:05 GMT 2010
    - Print compilation errors if we fail to load a plugin

0.09  Mon Jun 28 21:24:31 GMT 2010
    - Color exceptions red when using terminal colors
    - Make sure we exit on exception when using multiple components

0.08  Mon Jun 28 20:00:32 GMT 2010
    - Fix problem with terminal color codes working across newlines

0.07  Mon Jun 28 19:55:27 GMT 2010
    - Use terminal colors for status messages, to easily differentiate it
      from other output

0.06  Sun Jun 27 08:34:55 GMT 2010